# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  argparser.py  diff_creator.py  form_check.py  format_checker.py  gendiff.py  generate_diff.py  get.py  parser.py
gendiff/formatter/: json.py  plain.py  styl.py  stylish.py
gendiff/generate_diff/: json.py  styl.py
gendiff/scripts/: diff.py  gendiff.py
gendiff/tests/: test_generate_diff.py  test_parser.py
gendiff/tests/fixtures/: file2.yml  result_json.txt  result_json1.txt  result_stylish.txt
tests/: test_formatter.py  test_generate_diff.py  test_parser.py
tests/fixtures/: file1.txt  result_json.txt  result_json2.txt  testing_constants.py
