[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Calculator of differences between JSON and YAML files."
authors = ["leeobsession <lera03skor@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/leeobsession/python-project-50"


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^5.0.4"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.diff:main"
